; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/PicoDrive/pico/carthw/svp/extr_compiler.c_tr_detect_rotate.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/PicoDrive/pico/carthw/svp/extr_compiler.c_tr_detect_rotate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@n_in_ops = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32*, i32)* @tr_detect_rotate to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @tr_detect_rotate(i32 %0, i32* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i32* %1, i32** %6, align 8
  store i32 %2, i32* %7, align 4
  %8 = load i32, i32* %5, align 4
  %9 = icmp ne i32 %8, 739
  br i1 %9, label %21, label %10

10:                                               ; preds = %3
  %11 = load i32*, i32** %6, align 8
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @PROGRAM(i32 %12)
  %14 = icmp ne i32 %13, 1251
  br i1 %14, label %21, label %15

15:                                               ; preds = %10
  %16 = load i32*, i32** %6, align 8
  %17 = load i32, i32* %16, align 4
  %18 = add nsw i32 %17, 1
  %19 = call i32 @PROGRAM(i32 %18)
  %20 = icmp ne i32 %19, 15
  br i1 %20, label %21, label %22

21:                                               ; preds = %15, %10, %3
  store i32 0, i32* %4, align 4
  br label %32

22:                                               ; preds = %15
  %23 = call i32 @tr_bank_read(i32 0)
  %24 = call i32 @EOP_MOV_REG_LSL(i32 0, i32 0, i32 4)
  %25 = call i32 @EOP_ORR_REG_LSR(i32 0, i32 0, i32 0, i32 16)
  %26 = call i32 @tr_bank_write(i32 0)
  %27 = load i32*, i32** %6, align 8
  %28 = load i32, i32* %27, align 4
  %29 = add nsw i32 %28, 2
  store i32 %29, i32* %27, align 4
  %30 = load i32, i32* @n_in_ops, align 4
  %31 = add nsw i32 %30, 2
  store i32 %31, i32* @n_in_ops, align 4
  store i32 3, i32* %4, align 4
  br label %32

32:                                               ; preds = %22, %21
  %33 = load i32, i32* %4, align 4
  ret i32 %33
}

declare dso_local i32 @PROGRAM(i32) #1

declare dso_local i32 @tr_bank_read(i32) #1

declare dso_local i32 @EOP_MOV_REG_LSL(i32, i32, i32) #1

declare dso_local i32 @EOP_ORR_REG_LSR(i32, i32, i32, i32) #1

declare dso_local i32 @tr_bank_write(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
